package com.atv.backend.dao.entities;public class Transaction {
}
